--- a/flaskr/templates/graph_creation.html
+++ b/flaskr/templates/graph_creation.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <form id="edges_form" method="post" action="{{url_for('graph.show_graph')}}">
-    <input style="width: 200px;" type="number" min="0" name="start" id="start" placeholder="Start vertex"><br>
-    <input style="width: 200px;" type="number" min="0" name="end" id="end" placeholder="End vertex"><br>
-    <input style="width: 200px;" type="number" min="0" name="weight" id="weight" placeholder="Weight of an edge"><br>
+    <input style="width: 200px;" type="number" min="0" max="{{v}}" name="start" id="start" placeholder="Start vertex"><br>
+    <input style="width: 200px;" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End vertex"><br>
+    <input style="width: 200px;" type="number" min="0" max="{{v}}" name="weight" id="weight" placeholder="Weight of an edge"><br>
 </form>
 <button onclick="add_edge()" type="button">Add edge</button>
 <input type="submit" value="Submit" form="edges_form">
