First try with uploading files

--- a/flaskr/templates/graph_show.html
+++ b/flaskr/templates/graph_show.html
@@ -8,6 +8,7 @@
 
 <p>{{ code }}</p>
 <p>{{ vertic }}</p>
+<p>{{ tmp_edges }}</p>
 <form method="post" action="{{ url_for('index') }}">
     <button onclick="clear_cookie()" name="forwardBtn" type="submit">Go back</button>
 {% endblock %}
