--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -10,7 +10,7 @@
 <form method="post" action="{{ url_for('graph.show_saved') }}" enctype="multipart/form-data">
     <label for="upload_file">If you want to load existing graph select a file and click the submit button below</label><br>
     <input type="file" name="upload_file" id="upload_file"><br>
-    <button type="submit">Submit</button>
+    <input type="submit" value="Upload">
 </form>
 {% endblock %}
         
