--- a/flaskr/templates/graph_show.html
+++ b/flaskr/templates/graph_show.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if code == 400 %}
-<p>Brawo pokazuje ci graf</p>
-{% elif code == 501 %}
-<p>Brawo jestes debilem</p>
-{% endif %}
-
+{% with messages = get_flashed_messages()  %}
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{message}}</p>
+        {% endfor %}
+    {% else %}
+        <p>Ale super graf</p>
+        <img src="{{graph_img}}" alt="Oops! There was a problem with your graph!"><br>
+        {{graph_img}}
+    {% endif %}
+{% endwith %}
 <p>{{ code }}</p>
 <p>{{ vertic }}</p>
 <p>{{ tmp_edges }}</p>
