--- a/flaskr/templates/graph_show_saved.html
+++ b/flaskr/templates/graph_show_saved.html
@@ -1,16 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if code == 400 %}
-<p>Brawo pokazuje ci graf</p>
-{% elif code == 501 %}
-<p>Brawo jestes debilem</p>
-{% endif %}
+
 
 {% with messages = get_flashed_messages()  %}
     {% if messages %}
         {% for message in messages %}
             <p>{{message}}</p>
         {% endfor %}
+    {% else %}
+        <p>Ale super graf</p>
     {% endif %}
 {% endwith %}
 {{ graph }}
