Fix cookie 'edges', need of fixing cookie format

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -11,5 +11,5 @@
         {% block content %}{% endblock %}
     </section>
 </body>
-<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js') }}" type="module"></script>
 </html>
