--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,7 +7,7 @@
     <input type="checkbox" name="is_directed" id="is_directed"><br>
     <input type="submit" value="Submit">
 </form>
-<form method="post" action="{{ url_for('graph.show_saved') }}" enctype="multipart/form-data">
+<form method="post" action="{{ url_for('graph.load') }}" enctype="multipart/form-data">
     <label for="upload_file">If you want to load existing graph select a file and click the submit button below</label><br>
     <input type="file" name="upload_file" id="upload_file" accept=".pkl, .pickle, .graphmlz"><br>
     <input type="submit" value="Upload">
