--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
     <title>Document</title>
 </head>
 <body>
@@ -11,5 +12,5 @@
         {% block content %}{% endblock %}
     </section>
 </body>
-<script src="{{ url_for('static', filename='script.js') }}" type="module"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </html>
