Add action 'remove edge'

--- a/flaskr/templates/graph_creation.html
+++ b/flaskr/templates/graph_creation.html
@@ -5,12 +5,13 @@
     <input style="width: 200px;" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End vertex"><br>
     <input style="width: 200px;" type="number" min="0" name="weight" id="weight" placeholder="Weight of an edge"><br>
 </form>
-<button onclick="add_edge('edges')" type="button">Add edge</button>
+<button onclick="handle_edge('add')" type="button">Add edge</button>
+<button onclick="handle_edge('remove')" type="button">Remove edge</button>
 <!-- <input type="button" value="Submit" form="edges_form"> -->
 <button onclick="send_data('{{graph_name}}')" type="button">Submit</button>
 <div class="error" id="error" style="display:none;color: red; font-weight: bolder;">ALE ZAWALILES WEZ TO POPRAW CO?? MASZ TY HONOR I GODNOSC?</div>
 <p id="info"></p>
 <script src="{{ url_for('static', filename='fix_cookie.js') }}"></script>
-<script src="{{ url_for('static', filename='send_load.js') }}"></script>
+<script src="{{ url_for('static', filename='get_graph_data.js') }}"></script>
 {% endblock %}
 
