--- a/flaskr/templates/graph_show.html
+++ b/flaskr/templates/graph_show.html
@@ -10,7 +10,9 @@
             <img src="{{ graph_img }}" alt="Oops! There was a problem with your graph!"><br>
             <button onclick="get_path('{{graph_name}}')" id="one_path" type="button">Show path</button>
             <button onclick="get_all_paths('{{graph_name}}')" id="all_paths" type="button">Show all paths</button>
-            <button onclick="" id="download" type="button">Download graph</button>
+            <form method="get" action="{{ graph_img }}">
+                <button type="submit">Download!</button>
+             </form>             
             <select name="" id="">
                 <option value="png">png</option>
                 <option value="pdf">pdf</option>
@@ -26,5 +28,6 @@
 </form>
 <script src="{{ url_for('static', filename='get_path.js') }}""></script>
 <script src="{{ url_for('static', filename='get_all_paths.js') }}""></script>
+<script src="{{ url_for('static', filename='download_file.js') }}""></script>
 {% endblock %}
 
