Include bootsratp, first version

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,9 +1,18 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number]{
+    -moz-appearance: textfield;
+}
 .edges{
     visibility: hidden;
     overflow-x: hidden;
     overflow-y: scroll;
     height: fit-content;
     max-height: 30vh;
+    min-height: 30vh;
     width: 20vw;
     background-color: cornsilk;
 }
