--- a/flaskr/templates/graph_creation.html
+++ b/flaskr/templates/graph_creation.html
@@ -1,22 +1,49 @@
 {% extends 'base.html' %}
 {% block content %}
-<form id="edges_form" method="post">
-    <input style="width: 200px;" type="number" min="0" max="{{v}}" name="start" id="start" placeholder="Start vertex"><br>
-    <input style="width: 200px;" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End vertex"><br>
-    <input style="width: 200px;" type="number" min="0" name="weight" id="weight" placeholder="Weight of an edge"><br>
-</form>
-<button onclick="handle_edge('add')" type="button">Add edge</button>
-<button onclick="handle_edge('remove')" type="button">Remove edge</button>
-<!-- <input type="button" value="Submit" form="edges_form"> -->
-<button onclick="send_data('{{graph_name}}')" type="button">Submit</button>
-<section class="error" id="error" style="display:none;color: red; font-weight: bolder;">ALE ZAWALILES WEZ TO POPRAW CO?? MASZ TY HONOR I GODNOSC?</section>
-<p id="info"></p><br>
-<button onclick="show_edges()">Show edges</button>
-<div class="edges">
-    <ol class="edges-list">
-        
-    </ol>
-</div>
+<div class="container-md h-100">
+    <div class="row justify-content-center align-items-center h-100">
+        <div class="col-md-6 text-center">
+            <form id="edges_form" method="post" class="d-flex flex-column justify-content-center align-items-center">
+                <input class="form-control w-25 mt-3 mb-2" type="number" min="0" max="{{v}}" name="start" id="start" placeholder="Start vertex"><br>
+                <input class="form-control w-25 mt-1 mb-2" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End vertex"><br>
+                <input class="form-control w-25 mt-1 mb-3" type="number" min="0" name="weight" id="weight" placeholder="Weight"><br>
+            </form>
+            <div class="btn-group" role="group" aria-label="Control-buttons">
+                <button class="btn btn-primary" onclick="handle_edge('add')" type="button">Add edge</button>
+                <button class="btn btn-primary" onclick="handle_edge('remove')" type="button">Remove edge</button>
+                <button class="btn btn-primary" onclick="send_data('{{graph_name}}')" type="button">Submit</button>
+            </div>
+            <section id="error" class="my-4"></section>
+            {% with messages = get_flashed_messages()  %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
+                            <i class="bi bi-exclamation-triangle-fill"></i>
+                            <strong>{{message}}.</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            <div class="accordion my-4" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            List of edges
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body edges">
+                            <ul id="edges-list" class="list-group list-group-flush">
+            
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+        </div>
+    </div>
+</div>    
 <script src="{{ url_for('static', filename='show_edges.js') }}"></script>
 <script src="{{ url_for('static', filename='fix_cookie.js') }}"></script>
 <script src="{{ url_for('static', filename='get_graph_data.js') }}"></script>
