--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -1,37 +1,35 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row" style="max-width: fit-content;">
-    <form method="post" action="{{ url_for('graph.set_weights') }}" class="form-horizontal mb-3">
-        <div class="input-group">
-            <div class="col-lg-2">
-                <label for="vertices" class="form-label pt-2 pb-2 ">Vertices:</label> 
-            </div>   
-            <div class="col-lg-6">
+<div class="container-md h-100">
+    <div class="row justify-content-center align-items-center h-100">
+        <div class="col-md-6">
+            <form method="post" action="{{ url_for('graph.set_weights') }}" class="form-horizontal mb-3">
                 <input type="number" min="1" name="vertices" class="form-control" id="vertices" placeholder="Enter amount of vertices" required>
-            </div>
-        </div>
-        <div class="input-group d-flex justify-content-center">    
-            <div class="col-lg-8">
                 <div class="form-check">
                     <label class="form-check-label" for="is_directed">Should the graph be directed?</label>
                     <input class="form-check-input" type="checkbox" name="is_directed" id="is_directed" >
                 </div>
-            </div>
-        </div>
-        <div class="col-lg-8">
-            <div class="form-group d-flex justify-content-center"> 
                 <button class="btn btn-primary w-25" type="submit">Submit</button>   
-            </div>
+            </form>
+            <form method="post" action="{{ url_for('graph.load') }}" enctype="multipart/form-data" class="form-horizontal">
+                <div class="input-group">
+                    <input type="file" class="form-control" name="upload_file" id="inputGroupFile02" accept=".pkl, .pickle">
+                    <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon04">Upload</button>  
+                </div>
+            </form>
+            {% with messages = get_flashed_messages()  %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
+                            <i class="bi bi-exclamation-triangle-fill"></i>
+                            <strong>{{message}}.</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
         </div>
-    </form>
-    <form method="post" action="{{ url_for('graph.load') }}" enctype="multipart/form-data" class="form-horizontal">
-        <div class="col-lg-8">
-            <div class="input-group">
-                <input type="file" class="form-control" name="upload_file" id="inputGroupFile02" accept=".pkl, .pickle">
-                <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon04">Upload</button>  
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
 
 {% endblock %}
