--- a/PathFinder/templates/base.html
+++ b/PathFinder/templates/base.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
+    <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <title>Path Finder</title>
 </head>
-<body style="height:99vh">
-    <section class="content h-100">
+<body style="height:100vh">
+    <section class="content h-85 bg-new-secondary overflow-hidden">
         {% block content %}{% endblock %}
+    </section> 
+    <section class="h-15 bg-new-secondary overflow-hidden">
+        <footer class="d-flex container-md h-100 bg-new-primary">
+            <div class="row d-flex w-100 justify-content-between align-self-end">
+                <div class="col-4 d-none d-sm-block py-1 px-2 mt-auto">
+                    <div class="p-6 text-light-blue mb-0 d-inline text-nowrap">© Copyright 2023 Przemysław Plata</div>
+                    <div class="p-6 text-light-blue mb-0 text-nowrap">Cookies</div>
+                </div>
+                <div class="col-4 d-block d-sm-none py-1 px-2 mt-auto">
+                    <div class="p-6 text-light-blue mb-0 text-nowrap">© Copyright 2023</div>
+                    <div class="p-6 text-light-blue mb-0 text-nowrap">Przemysław Plata</div>
+                    <div class="p-6 text-light-blue mb-0 text-nowrap">Cookies</div>
+                </div>
+                <div class="col-5 col-sm-3 col-lg-2 px-2 mt-auto">
+                    <img class="img-fluid" src="{{ url_for('static', filename='assets/images/second_logo_white.png') }}" alt="logo">
+                </div>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
