--- a/PathFinder/templates/index.html
+++ b/PathFinder/templates/index.html
@@ -1,21 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container-md h-100">
-    <div class="row justify-content-center align-items-center h-100">
+<div class="container-md h-100 bg-new-primary">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <p class="display-2 fw-bold text-new-orange text-center mb-0 mt-0">GRAPHS.</p>
+            <p class="fs-6 fst-italic text-light-blue text-center mb-0 mt-0">"Make your own..."</p>
+        </div>
+    </div>
+    <div class="row justify-content-center align-items-center h-50">
         <div class="col-md-6">
             <form method="post" action="{{ url_for('graph.set_weights') }}" class="form-horizontal mb-3 text-center">
-                <input type="number" min="1" name="vertices" class="form-control" id="vertices" placeholder="Enter amount of vertices" required>
+                <input type="number" min="1" name="vertices" class="form-control bg-new-secondary border-3 border-new-orange text-light-blue" id="vertices" placeholder="Enter amount of vertices" required>
                 <div class="d-flex justify-content-center">
-                    <input class="form-check-input me-2" type="checkbox" name="is_directed" id="is_directed" >
-                    <label class="form-check-label" for="is_directed">Should the graph be directed?</label>
+                    <input class="form-check-input me-2 bg-new-secondary border-3 border-new-orange" type="checkbox" name="is_directed" id="is_directed" >
+                    <label class="form-check-label text-new-orange fw-light" for="is_directed">Should graph be directed?</label>
                 </div>
-                <button class="btn btn-primary w-25" onclick="clear_cookie('edges','/graph')" type="submit">Submit</button>   
+                <button class="btn btn-new-orange w-25 text-new-secondary mt-2" onclick="clear_cookie('edges','/graph')" type="submit">Submit</button>   
             </form>
-            <p class="fs-6 text fw-bold">Already have a graph? Upload it below:</p>
             <form method="post" action="{{ url_for('graph.load') }}" enctype="multipart/form-data" class="form-horizontal">
+                <label for="inputGroupFile02" class="text-new-orange fw-light">Already have a graph? Upload it below:</label>
                 <div class="input-group">
-                    <input type="file" class="form-control" name="upload_file" id="inputGroupFile02" accept=".pkl, .pickle">
-                    <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon04">Upload</button>  
+                    <button class="btn btn-new-secondary border-3 border-new-orange border-end-0" type="button" id="fake-file">Browse...</button>
+                    <input type="file" class="d-none" name="upload_file" id="file" accept=".pkl, .pickle">
+                    <input type="text" class="form-control border-3 border-new-orange bg-new-secondary text-light-brown" id="fake-filename" readonly>
+                    <button class="btn btn-new-secondary border-3 border-new-orange border-start-0" type="submit" id="inputGroupFileAddon04">Upload</button>  
                 </div>
             </form>
             {% with messages = get_flashed_messages()  %}
@@ -32,5 +40,6 @@
         </div>
     </div>
 </div>
+<script src="{{ url_for('static', filename='scripts/upload_file.js') }}"></script>
 {% endblock %}
         
