--- a/PathFinder/templates/graph_creation.html
+++ b/PathFinder/templates/graph_creation.html
@@ -17,24 +17,24 @@
             {% with messages = get_flashed_messages()  %}
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
+                        <div class="alert alert-danger alert-dismissible fs-6 fade show mt-4" role="alert">
                             <i class="bi bi-exclamation-triangle-fill"></i>
-                            <strong>{{message}}.</strong>
+                            <span class="fs-sm">{{message}}.</span>
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
             <div class="accordion my-4" id="accordionExample">
-                <div class="accordion-item border-dark-brown border-2">
-                    <h2 class="accordion-header bg-light-brown" id="flush-headingOne">
-                        <button class="accordion-button collapsed bg-light-brown text-new-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <div class="accordion-item border-new-orange border-2">
+                    <h2 class="accordion-header bg-new-orange" id="flush-headingOne">
+                        <button class="accordion-button collapsed bg-new-orange text-new-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             List of edges
                         </button>
                     </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body edges bg-light-brown">
-                            <ul id="edges-list" class="list-group list-group-flush border-dark-brown">
+                    <div id="flush-collapseOne" class="accordion-collapse collapse bg-primary" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body edges bg-new-secondary">
+                            <ul id="edges-list" class="list-group list-group-flush border-new-orange">
             
                             </ul>
                         </div>
