--- a/PathFinder/templates/graph_creation.html
+++ b/PathFinder/templates/graph_creation.html
@@ -1,40 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container-md h-100">
-    <div class="row justify-content-center align-items-center h-100">
+<div class="container-md h-100 bg-new-primary">
+    <div class="row justify-content-center align-items-center h-75">
         <div class="col-md-6 text-center">
             <form id="edges_form" method="post" class="d-flex flex-column justify-content-center align-items-center">
-                <input class="form-control w-25 mt-3 mb-2" type="number" min="0" max="{{v}}" name="start" id="start" placeholder="Start vertex">
-                <input class="form-control w-25 mt-1 mb-2" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End vertex">
-                <input class="form-control w-25 mt-1 mb-3" type="number" min="0" name="weight" id="weight" placeholder="Weight">
+                <input class="form-control w-25 mt-3 mb-2 text-light-blue bg-new-secondary border-3 border-new-orange" type="number" min="0" max="{{v}}" name="start" id="start" placeholder="Start">
+                <input class="form-control w-25 mt-1 mb-2 text-light-blue bg-new-secondary border-3 border-new-orange" type="number" min="0" max="{{v}}" name="end" id="end" placeholder="End">
+                <input class="form-control w-25 mt-1 mb-3 text-light-blue bg-new-secondary border-3 border-new-orange" type="number" min="0" name="weight" id="weight" placeholder="Weight">
             </form>
             <div class="btn-group" role="group" aria-label="Control-buttons">
-                <button class="btn btn-primary" onclick="handle_edge('add')" type="button">Add edge</button>
-                <button class="btn btn-primary" onclick="handle_edge('remove')" type="button">Remove edge</button>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Submit</button>                  
+                <button class="btn btn-new-orange text-new-secondary" onclick="handle_edge('add')" type="button">Add edge</button>
+                <button class="btn btn-new-orange text-new-secondary" onclick="handle_edge('remove')" type="button">Remove edge</button>
+                <button type="button" class="btn btn-new-orange text-new-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Submit</button>                  
             </div>
             <section id="error" class="my-4"></section>
             {% with messages = get_flashed_messages()  %}
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
+                        <div class="alert alert-danger alert-dismissible fs-6 fade show mt-4" role="alert">
                             <i class="bi bi-exclamation-triangle-fill"></i>
-                            <strong>{{message}}.</strong>
+                            <span class="fs-sm">{{message}}.</span>
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
             <div class="accordion my-4" id="accordionExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <div class="accordion-item border-new-orange border-2">
+                    <h2 class="accordion-header bg-new-orange" id="flush-headingOne">
+                        <button class="accordion-button collapsed bg-new-orange text-new-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             List of edges
                         </button>
                     </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body edges">
-                            <ul id="edges-list" class="list-group list-group-flush">
+                    <div id="flush-collapseOne" class="accordion-collapse collapse bg-primary" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body edges bg-new-secondary">
+                            <ul id="edges-list" class="list-group list-group-flush border-new-orange">
             
                             </ul>
                         </div>
@@ -46,32 +46,32 @@
 </div>
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
+      <div class="modal-content bg-new-secondary text-new-orange">
+        <div class="modal-header bg-new-secondary border-0">
           <h1 class="modal-title fs-5" id="staticBackdropLabel">Path details</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body bg-new-primary">
           <form id="path_details" method="post" action="{{ url_for('graph.create', name=graph_name) }}">
             <p class="fs-5">Please, enter starting and ending vertex of a path.</p>
-            <div class="input-group">
-                <span class="input-group-text" id="basic-addon1">Start vertex: </span>
-                <input class="form-control" type="number" min="0" max="{{v}}" name="path_start" id="path_start" required>
+            <div class="input-group mb-2">
+                <span class="input-group-text bg-new-secondary border-3 border-new-orange text-light-blue" id="basic-addon1">Start vertex: </span>
+                <input class="form-control bg-new-secondary border-3 border-start-0 border-new-orange text-light-blue" type="number" min="0" max="{{v}}" name="path_start" id="path_start" required>
             </div>
-            <div class="input-group">
-                <span class="input-group-text" id="basic-addon1">End vertex: </span>
-                <input class="form-control" type="number" min="0" max="{{v}}" name="path_end" id="path_end" required>
+            <div class="input-group mt-2">
+                <span class="input-group-text bg-new-secondary border-3 border-new-orange text-light-blue" id="basic-addon1">End vertex: </span>
+                <input class="form-control bg-new-secondary border-3 border-start-0 border-new-orange text-light-blue" type="number" min="0" max="{{v}}" name="path_end" id="path_end" required>
             </div>
           </form>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary" form="path_details">Create graph</button>
+        <div class="modal-footer bg-new-secondary border-0">
+          <button type="button" class="btn btn-light-blue text-new-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-new-orange text-new-secondary" form="path_details">Create graph</button>
         </div>
       </div>
     </div>
 </div>  
-<script src="{{ url_for('static', filename='show_edges.js') }}"></script>
-<script src="{{ url_for('static', filename='fix_cookie.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/show_edges.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/fix_cookie.js') }}"></script>
 {% endblock %}
 
